[gd_scene load_steps=3 format=2]

[ext_resource path="res://MainMenuEscape.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Main_menu_background.png" type="Texture" id=2]

[node name="MainMenuEscape" type="Node2D"]
script = ExtResource( 1 )

[node name="MainMenuBackground" type="Sprite" parent="."]
position = Vector2( 512, 300 )
scale = Vector2( 0.8, 0.833333 )
texture = ExtResource( 2 )

[node name="Continue" type="Button" parent="."]
margin_left = 52.0
margin_top = 149.0
margin_right = 315.0
margin_bottom = 219.0
text = "CONTINUE"

[node name="MainMenu" type="Button" parent="."]
margin_left = 53.0
margin_top = 248.0
margin_right = 314.0
margin_bottom = 318.0
text = "QUIT TO MAIN MENU"

[connection signal="pressed" from="Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="MainMenu" to="." method="_on_MainMenu_pressed"]
